<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".simulation.SimulationActivity">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/activity_simulation_text_view_invested_amount"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/activity_simulation_text_value_apply"
        android:textAlignment="center"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/activity_simulation_edit_text_invested_amount"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

    <com.example.challengeeasy.SimulationEditText
        android:id="@+id/activity_simulation_edit_text_invested_amount"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:hint="@string/activity_simulation_text_hint_currency"
        android:inputType="numberDecimal"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/activity_simulation_text_view_maturity_date"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/activity_simulation_text_view_invested_amount"
        app:type="monetary" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/activity_simulation_text_view_maturity_date"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/activity_simulation_text_due_date"
        android:textAlignment="center"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/activity_simulation_edit_text_maturity_date"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/activity_simulation_edit_text_invested_amount" />

    <com.example.challengeeasy.SimulationEditText
        android:id="@+id/activity_simulation_edit_text_maturity_date"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/activity_simulation_text_hint_date"
        android:inputType="date"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/activity_simulation_text_view_rate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/activity_simulation_text_view_maturity_date"
        app:type="date" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/activity_simulation_text_view_rate"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/activity_simulation_text_percentage"
        android:textAlignment="center"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/activity_simulation_edit_text_rate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/activity_simulation_edit_text_maturity_date" />

    <com.example.challengeeasy.SimulationEditText
        android:id="@+id/activity_simulation_edit_text_rate"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:hint="@string/activity_simulation_text_hint_percentage"
        android:inputType="number"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/activity_simulation_button_simulate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/activity_simulation_text_view_rate"
        app:type="percentage" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/activity_simulation_button_simulate"
        style="@style/buttonSimulate"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:enabled="false"
        android:text="@string/activity_simulation_text_simulate"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/activity_simulation_edit_text_rate" />
</androidx.constraintlayout.widget.ConstraintLayout>